--- a/WEBSITE_SWASTIKA/The Asiatic Society/developer_asiatic society.html
+++ b/WEBSITE_SWASTIKA/The Asiatic Society/developer_asiatic society.html
@@ -29,7 +29,7 @@
     <main>
         <div class="middle-section">
              <div class="middle-box">
-               <img src="..\team_profiles\chitradeep1.jpg" alt="Chitradeep image" style="width: 200px !important; height: 245px !important;" class="gallery-image" />
+               <img src="..\team_profiles\chitradeep.jpg" alt="Chitradeep image" style="width: 200px !important; height: 245px !important;" class="gallery-image" />
                  <br>
 		        <span style="font-size: 25px; font-weight: bold;">CHITRADEEP SAHA</span>
                  <br>
